circle and arc adding function

--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
 </head>
 <body>
-    
+    <label>Number of Blue Circles : </label>
+    <input type="number" id="blueBalls" value="0"/>
+    <br/>
+
+    <svg id="outSVG" width="200" height="200" xmlns="http://www.w3.org/2000/svg">
+        <circle cx="20" cy="100" r="10" fill="red"></circle>
+    </svg>
+
     <script src="js/main.js"></script>
 </body>
 </html>
