--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <input type="number" id="blueBalls" value="0"/>
     <br/>
 
-    <svg id="outSVG" width="200" height="200" xmlns="http://www.w3.org/2000/svg">
+    <svg id="outSVG" width="200" height="200" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
         <circle cx="20" cy="100" r="10" fill="red"></circle>
     </svg>
 
