--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <circle cx="20" cy="100" r="10" fill="red"></circle>
     </svg>
 
+    <script src="js/movieData.js"></script>
+    <script src="js/dataMaping.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
