--- a/index.html
+++ b/index.html
@@ -8,13 +8,8 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
 </head>
 <body>
-    <label>Number of Blue Circles : </label>
-    <input type="number" id="blueBalls" value="0"/>
-    <br/>
-
-    <svg id="outSVG" width="200" height="200" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-        <circle cx="20" cy="100" r="10" fill="red"></circle>
-    </svg>
+    
+    <svg id="outSVG" width="500px" xmlns="http://www.w3.org/2000/svg"></svg>
 
     <script src="js/movieData.js"></script>
     <script src="js/dataMaping.js"></script>
