Print Movies Name

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Interactive Infographic of </title>
+    <title>Interactive Infographic of Movies</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
 </head>
 <body>
-    
+
     <svg id="outSVG" width="500px" xmlns="http://www.w3.org/2000/svg"></svg>
 
     <script src="js/movieData.js"></script>
