--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <svg id="outSVG" width="1000px" xmlns="http://www.w3.org/2000/svg"></svg>
+    <svg id="outSVG" xmlns="http://www.w3.org/2000/svg"></svg>
 
     <script src="js/movieData.js"></script>
     <script src="js/dataMaping.js"></script>
