Text Put around Circle

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
 
-    <svg id="outSVG" xmlns="http://www.w3.org/2000/svg"></svg>
+    <svg id="circularInfographic" xmlns="http://www.w3.org/2000/svg"></svg>
+    <svg id="linerInfographic" xmlns="http://www.w3.org/2000/svg"></svg>
 
     <script src="js/movieData.js"></script>
     <script src="js/dataMaping.js"></script>
