print reactangle for all genres

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <svg id="linerInfographic" xmlns="http://www.w3.org/2000/svg"></svg>
     </section>
     <!-- to fetch data from internet -->
-    <script src="js/data.js"></script>
+    <!-- <script src="js/data.js"></script> -->
     <!-- Output data -->
     <script src="js/movieData.js"></script>
     <!-- to remap the data -->
