movie info on hover added

--- a/index.html
+++ b/index.html
@@ -9,10 +9,20 @@
 </head>
 <body>
     <section id="infoGraphics">
+        <h1>Movie Genres</h1>
         <h2>Top Movies and it's Genres</h2>
         <svg id="circularInfographic" xmlns="http://www.w3.org/2000/svg"></svg>
+        <h2> Genres IMDB Rating & it's Inter-Connection</h2>
         <svg id="linerInfographic" xmlns="http://www.w3.org/2000/svg"></svg>
     </section>
+    <div id="movieInfo">
+        <img src="https://m.media-amazon.com/images/M/MV5BMjAwMzAzMzExOF5BMl5BanBnXkFtZTgwOTcwMDA5MTE@._V1_SX300.jpg" alt="poster"/>
+        <div id="info">
+            <h4>Title</h4>
+            <span>2015</span><br/>
+            <p>Plot</p>
+        </div>
+    </div>
     <!-- to fetch data from internet -->
     <!-- <script src="js/data.js"></script> -->
     <!-- Output data -->
