--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <svg id="linerInfographic" xmlns="http://www.w3.org/2000/svg"></svg>
     </section>
     <div id="movieInfo">
-        <img src="https://m.media-amazon.com/images/M/MV5BMjAwMzAzMzExOF5BMl5BanBnXkFtZTgwOTcwMDA5MTE@._V1_SX300.jpg" alt="poster"/>
+        <img src="images/poster.jpg" alt="poster"/>
         <div id="info">
             <h4>Title</h4>
             <span>2015</span><br/>
