Measuring Lines added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Movie Genres</h1>
         <h2>Top Movies and it's Genres</h2>
         <svg id="circularInfographic" xmlns="http://www.w3.org/2000/svg"></svg>
-        <h2> Genres IMDB Rating & it's Inter-Connection</h2>
+        <h2> Genres IMDB Rating & it's Interconnection</h2>
         <svg id="linerInfographic" xmlns="http://www.w3.org/2000/svg"></svg>
     </section>
     <div id="movieInfo">
