Genres Mouse hover  added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@
         <div id="info">
             <h4>Title</h4>
             <span>2015</span><br/>
+            <ul></ul><br/>
             <p>Plot</p>
+        </div>
+    </div>
+    <div id="genInfo">
+        <div>
+            <h4></h4>
+            <ul></ul>
         </div>
     </div>
     <!-- to fetch data from internet -->
