--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
 <body>
     <section id="infoGraphics">
         <h1>Movie Genres</h1>
+
         <h2>Top Movies and it's Genres</h2>
         <svg id="circularInfographic" xmlns="http://www.w3.org/2000/svg"></svg>
-        <h2> Genres IMDB Rating & it's Interconnection</h2>
+
+        <h2> Genres Average IMDB Rating & it's Interconnection</h2>
         <svg id="linerInfographic" xmlns="http://www.w3.org/2000/svg"></svg>
+
+        
     </section>
     <div id="movieInfo">
         <img src="images/poster.jpg" alt="poster"/>
@@ -36,7 +40,11 @@
     <script src="js/movieData.js"></script>
     <!-- to remap the data -->
     <script src="js/dataMaping.js"></script>
-    <!-- To draw infographic from data -->
+    <!-- Functions -->
     <script src="js/main.js"></script>
+    <!-- To draw Flower Type infographic from data -->
+    <script src="js/flowerGraph.js"></script>
+    <!-- To draw interconnecting infographic from data -->
+    <script src="js/interconnectingGraph.js"></script>
 </body>
 </html>
