--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
     <title>Interactive Infographic of Movies' Genres </title>
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
 </head>
 <body>
+    <svg id="posterBackground" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"></svg>
     <section id="infoGraphics">
+
         <h1>Movie Genres</h1>
 
         <h2>Top Movies and it's Genres</h2>
@@ -16,9 +20,10 @@
 
         <h2> Genres Average IMDB Rating & it's Interconnection</h2>
         <svg id="linerInfographic" xmlns="http://www.w3.org/2000/svg"></svg>
-
         
     </section>
+
+
     <div id="movieInfo">
         <img src="images/poster.jpg" alt="poster"/>
         <div id="info">
@@ -28,12 +33,14 @@
             <p>Plot</p>
         </div>
     </div>
+
     <div id="genInfo">
         <div>
-            <h4></h4>
+            <h4>Title</h4>
             <ul></ul>
         </div>
     </div>
+
     <!-- to fetch data from internet -->
     <!-- <script src="js/data.js"></script> -->
     <!-- Output data -->
