Data Fetch and Preloader added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
 </head>
 <body>
+    
+    <img src="images/preloader.svg" alt="preLoader" id="preLoader">
+
     <svg id="posterBackground" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"></svg>
     <section id="infoGraphics">
 
@@ -41,17 +44,15 @@
         </div>
     </div>
 
-    <!-- to fetch data from internet -->
-    <!-- <script src="js/data.js"></script> -->
-    <!-- Output data -->
-    <script src="js/movieData.js"></script>
+    <!-- to fetch data -->
+    <script src="js/data.js"></script>
     <!-- to remap the data -->
     <script src="js/dataMaping.js"></script>
+    <!-- To draw Flower Type infoGraphic from data -->
+    <script src="js/flowerGraph.js"></script>
+    <!-- To draw interconnecting infoGraphic from data -->
+    <script src="js/interconnectingGraph.js"></script>
     <!-- Functions -->
     <script src="js/main.js"></script>
-    <!-- To draw Flower Type infographic from data -->
-    <script src="js/flowerGraph.js"></script>
-    <!-- To draw interconnecting infographic from data -->
-    <script src="js/interconnectingGraph.js"></script>
 </body>
 </html>
